--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,81 @@
 @import './base.css';
+@import './media.css';
+body{
+    font-family: var(--mainFont);
+    background-color:#eee;
+    height: 1000px;
+}
+.header{
+    background-color: #ffff;
+    padding: 20px 0;
+    position: sticky;
+    top: 0;
+}
+.header .logo a{
+    color:var(--mainColor) ;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 2.5px;
+}
+.header .logo a img{
+    width: 35px;
+}
+.bars{
+    display: none;
+}
+
+.nav ul{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.nav ul li a{
+    color: #101928;
+}
+.nav ul .active{
+    font-weight: 900;
+}
+.auth{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    gap: 15px;
+}
+.auth a{
+    font-family: var(--subFont);
+    color: var(--mainColor);
+    border-radius: 10px;
+    padding: 9.3541765213012695px 24.18113136291504px;
+    border: 1px solid #545be8;
+
+}
+.auth .Register{
+    color: #ffff;
+    background-color:#545BE8;
+}
+@media screen and (max-width:992px){
+    .nav{
+       display: none;
+   }
+   .bars{
+       display: block;
+       order: 1;
+   }
+}
+@media screen and (max-width:580px){
+    .container{
+        width:calc(100% - 122px);
+    }
+    .header .logo a {
+        font-size: 14px;
+    }
+    .header .logo a img {
+        width: 25px;
+    }
+    .auth{
+        display: none;
+    }
+    
+
+}
